--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=ab569c68763df1e940adf3d827980f42
+DISCOGS_CONSUMER_KEY=
+DISCOGS_CONSUMER_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
