--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
+  globals:
+    app_locale: '%locale%'
+  default_path: '%kernel.project_dir%/templates'
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
